# server/docs/swagger.yaml
@@ -924,7 +924,7 @@ definitions:
         allOf:
         - $ref: '#/definitions/common.AttachmentMap'
         description: 公寓照片
-      building:
+      building_id:
         description: 楼栋
         type: string
       city:
@@ -954,7 +954,7 @@ definitions:
       follow:
         description: 关注次数
         type: integer
-      house:
+      house_id:
         description: 房号
         type: string
       house_type:
@@ -966,6 +966,9 @@ definitions:
       price:
         description: 房源价格
         type: integer
+      region:
+        description: 行政区
+        type: string
       remarks:
         description: 备注信息
         type: string
@@ -978,7 +981,7 @@ definitions:
       status:
         description: 状态 已出租，已下架，待出租
         type: string
-      unit:
+      unit_id:
         description: 单元
         type: string
       updated_last_at:
@@ -1483,6 +1486,33 @@ definitions:
         description: 短信验证码
         type: string
     type: object
+  request.MySearchResource:
+    properties:
+      desc:
+        description: 排序方式:升序false(默认)|降序true
+        type: boolean
+      doorNo:
+        description: 户室号
+        type: string
+      keyword:
+        description: 关键字
+        type: string
+      orderKey:
+        description: 排序
+        type: string
+      page:
+        description: 页码
+        type: integer
+      pageSize:
+        description: 每页大小
+        type: integer
+      status:
+        description: 出租类型： 已出租，已下架，待出租
+        type: string
+      xiaoquId:
+        description: 小区id
+        type: integer
+    type: object
   request.PageInfo:
     properties:
       keyword:
@@ -1876,7 +1906,7 @@ definitions:
         allOf:
         - $ref: '#/definitions/common.AttachmentMap'
         description: 公寓照片
-      building:
+      building_id:
         description: 楼栋
         type: string
       city:
@@ -1906,7 +1936,7 @@ definitions:
       follow:
         description: 关注是否
         type: boolean
-      house:
+      house_id:
         description: 房号
         type: string
       house_type:
@@ -1924,6 +1954,9 @@ definitions:
       price:
         description: 房源价格
         type: integer
+      region:
+        description: 行政区
+        type: string
       remarks:
         description: 备注信息
         type: string
@@ -1936,7 +1969,7 @@ definitions:
       status:
         description: 状态 已出租，已下架，待出租
         type: string
-      unit:
+      unit_id:
         description: 单元
         type: string
       updated_last_at:
@@ -3074,6 +3107,41 @@ paths:
                   type: string
               type: object
       summary: 房源审核列表
+      tags:
+      - Admin
+  /api/house/my:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 分页获取API列表
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.MySearchResource'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 分页获取API列表,返回包括列表,总数,页码,每页数量
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/response.PageResult'
+                  - properties:
+                      list:
+                        items:
+                          $ref: '#/definitions/house.Resource'
+                        type: array
+                    type: object
+                msg:
+                  type: string
+              type: object
+      summary: 我发的房源列表
       tags:
       - Admin
   /api/house/options:
